--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -21,7 +21,7 @@ set-option -g default-terminal "xterm-256color"
 # bind -t emacs-copy M-w copy-pipe "xclip -i -sel p -f | xclip -i -sel c "
 # bind ] run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
 bind -t emacs-copy M-w copy-pipe "pbcopy"
-bind ] run "pbpaste | tmux load-buffer - ; tmux paste-buffer"
+bind ] run 'pbpaste | tmux load-buffer - && tmux paste-buffer'
 
 # zshを起動させる。
 set-option -g default-command "which zsh 2>&1 > /dev/null && TERM=screen-256color zsh"
