エラーが出ていたので

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ home/.config/fcitx/
 home/.config/pulse/
 home/.config/transmission/
 home/.config/hub
+home/.config/vlc/
+home/.config/Trolltech.conf
